--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
 title: BlueDiablos Android Studio Blog
-url: https://stiaannel.co.za/bluediablos-android-studio-blog
+url: https://bluediablos.github.io/blog
 paginate: 1
-baseurl: "/bluediablos-android-studio-blog"
+baseurl: "/blog"
 permalink: pretty
 
 # Gems
@@ -42,7 +42,7 @@ version: 3.0.0
 # Navbar page list
 nav:
   - title: Archive
-    url: /bluediablos-android-studio-blog/archive
+    url: /blog/archive
 
   - title: About
-    url: /bluediablos-android-studio-blog/about
+    url: /blog/about
