Fixed header and colors

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
-title: Noir
-tagline: a dark mode friendly Jekyll theme
-url: https://noir.essentialenemy.com
+title: ""
+tagline: a Hacking and Open-source intelligence tools I found
+url: https://BlueDiablos1234.github.io
 paginate: 1
 baseurl: ""
 permalink: :title/
